1.2.18 unreleased

- Fix test "post" backup command.
  [smcmahon]

- Remove bootstrap.py in the Plone 4.x install and instead use a buildout created by installing zc.buildout in the virtualenv.
  bootstrap.py was already unused in the Plone 5.x install.
  This should not affect existing Plone 4.x installs.
  [smcmahon]

1.2.17 2017-05-11

- Add option to set backup post_command: plone_backup_post_command.
  [smcmahon]

1.2.16 2017-04-19

- setuptools 35.0.0 changes the way manifests are handled, causing .xml files to be lost in installation of several packages.
  Introduced a mechanism to set the setuptools and zc.buildout versions. Set working defaults.
  Version variables work globally or in particular instances.
  New variables and their defaults are plone_setuptools_version: '26.1.1' and plone_zc_buildout_version: '2.5.3'.
  [smcmahon]

- Add a "plone_timezone" variable that may be used to set a timezone (via TZ environment variable) that may be different from the server or other plones.
  [smcmahon]

- Timezone-setting mechanism wasn't working in Xenial.
  Fixed with a mechanism that should work on any system with timedatectl.
  [smcmahon]

- Add plone_hot_monitor variable to control use of superlance.
  [smcmahon]

- Make default Plone 5.0.7.
  [smcmahon]

- Set backup directory correctly when building multiple Plones. Fixes #103.
  [smcmahon]

- Update source for wv for CentOS7.
  [smcmahon]

1.2.15 2017-02-01

- Redirect stdout and stderr for buildout into a log file.
  This works around an Ansible bug that caused errors with misleading error messages if buildout output was long.
  Workaround: if you don't have this fix, just run the playbook again.
  The error resolves itself as soon as buildout output is smaller.
  [smcmahon]

1.2.14 2017-01-20

- Remove uses of jinja2 "truncate", which has stopped working as advertised.
  [smcmahon]

1.2.13 2016-10-07

- Turn of ssh strict host checking by Ansible in generated Vagrant vbox_host.cfg.
  [smcmahon]
